# blastcap

./: .editorconfig  .gitignore  .mailmap  Cargo.toml  build.sh  flake.nix  run.sh
blastcap-core/: game_data.rs  lib.rs
blastcap-core/game/: mod.rs
blastcap-core/game/actor/: abilities.rs  card_holder.rs  mod.rs  resources.rs
blastcap-core/game/map/: mod.rs
blastcap-core/game/state/: clear_room.rs  game_started.rs  lobby.rs  mod.rs  waiting.rs
blastcap-core/game/state/core/: clear_room.rs  enter_dungeon.rs  finish.rs  loot_room.rs  mod.rs  prepare_character.rs
blastcap-core/network/: channel.rs  client.rs  host.rs  messages.rs  metadata.rs  mod.rs  socket_addr_ext.rs  steam.rs  tcp.rs
blastcap-core/network/impls/: mod.rs  steam.rs  tcp.rs
blastcap-crates/data/: Cargo.toml  bin.rs  lib.rs
blastcap-crates/data/types/: mod.rs
blastcap-crates/mapgen/src/: lib.rs
blastcap-crates/math/: Cargo.toml  lib.rs  vec2.rs
blastcap-crates/random/: Cargo.toml  bindings.rs  lib.rs  main.rs  randomize.rs
blastcap-crates/select/: Cargo.toml  bin.rs  legacy.rs  lib.rs
blastcap-crates/sharpify/: lib.rs
blastcap-data/Cap/: Info.toml
blastcap-data/Cap/Abilities/: Jump.toml  Punch.toml  Walk.toml
blastcap-data/Cap/Cards/: Dynamite.toml  Jump.toml  Punch.toml  Shoot.toml  Walk.toml
blastcap-data/Cap/UI/: splash.png.import
blastcap-data/DnDSE/: Info.toml
blastcap-data/DnDSE/Sound/: SimplePunch.ogg.import
blastcap-doc/: design-doc.typ  template.typ
blastcap-frontend/: .gitignore  Blastcap.csproj  blastcap-data  icon.svg.import  project.godot
blastcap-frontend/objects/: Actor.cs  Actor.tscn  PlayerCamera.cs  PlayerCamera.cs.uid  PlayerCamera.tscn
blastcap-frontend/objects/Effects/: Explosion.cs  Explosion.tscn  Sound.cs
blastcap-frontend/objects/GUI/: Card.cs  ChatBox.cs  ChatBox.tscn  TinyPopup.cs
blastcap-frontend/objects/Globals/: Data.Types.cs.uid  Data.cs  Linker.cs  Linker.cs.uid  NetworkManager.cs  RsRandom.cs
blastcap-frontend/objects/Globals/Network/: Network.cs
blastcap-frontend/objects/Scenes/: Game.cs  Game.tscn  Loading.cs  Loading.cs.uid  Loading.tscn  LobbyScreen.cs  LobbyScreen.cs.uid  LobbyScreen.tscn  MainMenu.cs  MainMenu.tscn
blastcap-frontend/scenes/: Game.cs  MainMenu.cs
core/: lib.rs
core/game/: mod.rs
core/game/actor/: card_holder.rs  mod.rs
core/game/map/: mod.rs
core/game/state/: mod.rs
core/game/state/core/: clear_room.rs  enter_dungeon.rs
core/network/: channel.rs  messages.rs  mod.rs
crates/data/: Cargo.toml  bin.rs
crates/data/types/: mod.rs
crates/mapgen/: Cargo.toml
crates/mapgen/src/: bindings.rs  lib.rs
crates/math/: Cargo.toml  lib.rs  vec2.rs  vec3.rs
crates/random/: Cargo.toml  main.rs
crates/sharpify/: Cargo.toml  lib.rs
data/Cap/Cards/: Punch.toml
data/Cap/Sound/: SimplePunch.ogg.import
doc/: design-doc.typ
frontend/: Blastcap.csproj  Blastcap.csproj.old  project.godot
frontend/objects/: Actor.cs  PlayerCamera.cs  PlayerCamera.tscn
frontend/objects/Effects/: Explosion.cs.uid  Sound.cs.uid  Sound.tscn  Water.gdshader  Water.gdshader.uid
frontend/objects/GUI/: Card.cs.uid  Card.tscn  ChatBox.tscn
frontend/objects/Globals/: MapGen.cs  MapGen.cs.uid  RsRandom.cs.uid
frontend/objects/Globals/Network/: Network_ClientCalls.cs.uid
frontend/objects/Scenes/: Game.cs  Game.tscn  LobbyScreen.cs  LobbyScreen.tscn  MainMenu.cs
godot/: .gitignore  Blastcap.csproj  Blastcap.sln  icon.svg.import  project.godot
godot/addons/commandrunner/: CommandRunner.tscn  Ferris.png.import  button.gd  button.gd.uid  commandrunner.gd  commandrunner.gd.uid  plugin.cfg
godot/objects/: Actor.tscn  ChatBox.tscn  PlayerCamera.tscn
godot/objects/GUI/: ChatBox.tscn  TinyPopup.tscn
godot/objects/Globals/: Constants.cs  NetworkManager.cs
godot/scenes/: Game.cs  Game.cs.uid  Game.tscn  MainMenu.cs  MainMenu.cs.uid  MainMenu.tscn  main.tscn
godot/src/: FFI.cs  FFI_ClientCalls.cs.uid
godot/src/FFI/: FFI.cs  FFI.cs.uid  FFI_Polling.cs.uid
godot/src/Globals/: Constants.cs.uid  Data.cs  Data.cs.uid  NetworkManager.cs  NetworkManager.cs.uid
godot/src/Objects/: Actor.cs  Actor.cs.uid  ChatBox.cs  ChatBox.cs.uid  PlayerCamera.cs
godot/src/Scenes/: Game.cs  MainMenu.cs
src/: args.rs  lib.rs  main.rs
src/game/: mod.rs
src/game/actor/: abilities.rs  mod.rs
src/game/state/: game_started.rs  lobby.rs  mod.rs  waiting.rs
src/gui/: connected.rs  main_menu.rs  mod.rs
src/network/: messages.rs  mod.rs  tcp.rs
sys/: .gitignore
(+8 files in other folders)
