[package]
name = "blastcap"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]
path = "blastcap-core/lib.rs"

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
futures.workspace = true
rand.workspace = true
rkyv.workspace = true
tokio.workspace = true
sharpify.workspace = true
serde.workspace = true
rmp-serde.workspace = true
pathfinding.workspace = true
math.workspace = true
steamworks.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
strip-ansi-escapes.workspace = true
noise.workspace = true

[workspace]
members = ["blastcap-crates/*"]

[workspace.dependencies]
anyhow = "1.0"
async-trait = "0.1.88"
futures = "0.3.31"
rand = "0.9.1"
rkyv = "0.8.10"
tokio = { version = "1.45.1", features = ["fs", "io-std", "io-util", "macros", "net", "parking_lot", "process", "rt", "signal", "sync", "time"] }
sharpify = { path = "blastcap-crates/sharpify" }
proc-macro2 = "1.0.95"
quote = "1.0.40"
syn = { version = "2.0.104", features = ["extra-traits", "printing"] }
convert_case = "0.8.0"
serde = { version = "1.0.219", features = ["derive"] }
rmp-serde = "1.3.0"
pathfinding = "4.14.0"
math = { path = "blastcap-crates/math" }
steamworks = "0.12.1"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
strip-ansi-escapes = "0.2.1"
noise = "0.9.0"
