[package]
name = "blastcap"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]
path = "blastcap-core/lib.rs"

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
rand.workspace = true
rkyv.workspace = true
sharpify.workspace = true
serde.workspace = true
rmp-serde.workspace = true
pathfinding.workspace = true
math.workspace = true
steamworks.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
strip-ansi-escapes.workspace = true
noise.workspace = true
smol.workspace = true
futures-concurrency.workspace = true
oneshot.workspace = true
select.workspace = true
paste.workspace = true

[workspace]
members = ["blastcap-crates/*"]

[workspace.dependencies]
anyhow = "1.0"
async-trait = "0.1.88"
rand = "0.9.1"
rkyv = "0.8.10"
sharpify = { path = "blastcap-crates/sharpify" }
proc-macro2 = "1.0.95"
quote = "1.0.40"
syn = { version = "2.0.104", features = ["extra-traits", "printing"] }
convert_case = "0.8.0"
serde = { version = "1.0.219", features = ["derive"] }
rmp-serde = "1.3.0"
pathfinding = "4.14.0"
math = { path = "blastcap-crates/math" }
steamworks = "0.12.1"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
strip-ansi-escapes = "0.2.1"
noise = "0.9.0"
smol = "2.0.2"
futures-concurrency = "7.6.3"
oneshot = "0.1.11"
select = { path = "blastcap-crates/select" }
paste = "1.0.15"
