[package]
name = "blastcap"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]
path = "blastcap-core/lib.rs"

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
rand.workspace = true
rkyv.workspace = true
sharpify.workspace = true
serde.workspace = true
minicbor-serde.workspace = true
pathfinding.workspace = true
math.workspace = true
steamworks.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
strip-ansi-escapes.workspace = true
noise.workspace = true
smol.workspace = true
futures-concurrency.workspace = true
oneshot.workspace = true
smol-concurrency-tools.workspace = true
data.workspace = true
rapidhash.workspace = true
random.workspace = true
pastey.workspace = true

[workspace]
members = ["blastcap-crates/*"]

[workspace.dependencies]
anyhow = "1.0"
async-trait = "0.1"
rand = "0.9"
rkyv = "0.8"
sharpify = { path = "blastcap-crates/sharpify" }
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "2.0", features = ["extra-traits", "printing"] }
convert_case = "0.8"
serde = { version = "1.0", features = ["derive"] }
minicbor-serde = { version = "0.6", features = ["full"] }
pathfinding = "4.14"
math = { path = "blastcap-crates/math" }
steamworks = "0.12"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
strip-ansi-escapes = "0.2"
noise = "0.9"
smol = "2.0"
futures-concurrency = "7.6"
oneshot = "0.1"
smol-concurrency-tools = { git = "https://github.com/loafey/smol-concurrency-tools.git", features = [
    "select",
] }
data = { path = "blastcap-crates/data" }
toml = "1.0"
walkdir = "2.5"
rapidhash = "4.4.1"
random = { path = "blastcap-crates/random" }
pastey = "0.2"
